--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -12,8 +12,8 @@
 	background-color: white;
 	box-shadow: 2px 2px 10px rgb(0, 0, 0, 0.5);
 	width: 80vh;
-	height: 80vh;
-	max-width: 80vw;
+	max-height: 80vw;
+	aspect-ratio: 1 / 1;
 	border-radius: 1rem;
 	display: flex;
 	flex-direction: column;
