--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -22,9 +22,17 @@
 }
 
 .share {
-	top: 20px;
-	right: 20px;
+	top: 10px;
+	right: 10px;
 	position: fixed;
+	width: 50px;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.share > svg {
 	width: 30px;
 	height: 30px;
 }
@@ -34,9 +42,17 @@
 }
 
 .add {
-	top: 20px;
-	left: 20px;
+	top: 10px;
+	left: 10px;
 	position: fixed;
+	width: 50px;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.add > svg {
 	width: 30px;
 	height: 30px;
 }
